--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,14 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	testImplementation('org.assertj:assertj-core')
-	testImplementation('org.mockito:mockito-core:3.1.0')
-	testImplementation('info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.0')
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+	testImplementation 'org.assertj:assertj-core'
+	testImplementation 'org.mockito:mockito-core:3.1.0'
+	testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.0'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'  {
 		exclude group: "junit", module: "junit"
 		exclude module: "junit-vintage-engine"
 	}
-	pitest("io.github.wmaarts:pitest-mutation-testing-elements-plugin:0.2.1")
+	pitest 'io.github.wmaarts:pitest-mutation-testing-elements-plugin:0.2.1'
 }
 
 test {
