build: switched source & target compatibility

--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,14 @@ plugins {
 	id 'info.solidsoft.pitest' version '1.5.2'
 }
 
+apply plugin: "java-library"
 apply plugin: "maven"
 
 group = 'com.github.eugenelesnov'
 version = '0.0.1-SNAPSHOT'
+
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 wrapper {
 	gradleVersion = '6.3'
