--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ apply plugin: "java-library"
 apply plugin: "maven"
 
 group = 'com.github.eugenelesnov'
-version = '0.0.1-SNAPSHOT'
+version = '1.2'
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
